Remove Python bytecode and update .gitignore
Remove compiled Python bytecode and update the .gitignore file to keep
.pyc files from being committed into the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Do not commit specific development, editor, and IDE files
 .vagrant/
 nbproject/
 .project
@@ -5,9 +6,13 @@ nbproject/
 .buildpath
 .settings/
 
+# Do not commit the database SQL dumps and Drupal sites.  Retain the two
+# folder's README.md files
 /database/*
 /data/*
 
 !/database/README.md
 !/data/README.md
 
+# Do not commit compiled Python bytecode
+*.pyc
