Ignore downloaded Ansible Galaxy roles
Support having Ansible download the Galaxy roles into the working copy
of the repository instead of globally across the developer machine’s
host. Updates the .gitignore file to ignore both the downloaded Ansible
Galaxy files and a repository-specific ansible.cfg. The README is
updated to document the syntax needed for the custom ansible.cfg.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ nbproject/
 
 # Do not commit compiled Python bytecode
 *.pyc
+
+# Do not commit downloaded Ansible Galaxy roles.  We'll need to adjust the
+# `roles/*` rule if we add custom roles in the future.
+/ansible/ansible.cfg
+/ansible/roles/*
