--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -4,7 +4,6 @@
   sudo: yes
   
   vars_files:
-    - vars/schools.yml
     - vars/apache.yml
     - vars/php.yml
     - vars/mysql.yml
@@ -19,12 +18,20 @@
     - role: geerlingguy.drush
 
   pre_tasks:
+    - name: Register drupal installations
+      shell: "find /vagrant/data -maxdepth 1 -mindepth 1 -type d | cut -f4 -d'/'"
+      register: data_directories
+      
+    - name: Register database names
+      shell: "find /vagrant/database -maxdepth 1 -mindepth 1 -type f | grep bak.sql.gz | cut -f4 -d'/' | cut -f1 -d'.'"
+      register: database_names
+  
     - name: Format a list of the school shortnames to make vhosts
       set_fact:
         vhost:
           servername: "{{ item }}.schools.dev"
           documentroot: "/var/www/schools/{{ item }}"
-      with_items: "{{ school_shortnames }}"
+      with_items: "{{ data_directories.stdout_lines }}"
       register: vhost_result
         
     - name: Set the vhosts from school shortnames
@@ -35,13 +42,19 @@
       file: src=/vagrant/data dest=/var/www/schools state=link
       notify: restart apache
       
+    - name: Write settings files
+      template:
+        src: templates/settings.php.j2
+        dest: /var/www/schools/{{ item }}/sites/default/settings.php
+      with_items: "{{ data_directories.stdout_lines }}"
+      
     - name: Remove databases
       mysql_db: 
         state: absent 
         name: "{{ item }}"
         login_user: root
         login_password: root
-      with_items: "{{ school_shortnames }}"
+      with_items: "{{ database_names.stdout_lines }}"
       
     - name: Create databases
       mysql_db: 
@@ -49,7 +62,7 @@
         name: "{{ item }}"
         login_user: root
         login_password: root
-      with_items: "{{ school_shortnames }}"
+      with_items: "{{ database_names.stdout_lines }}"
       
     - name: Import databases
       mysql_db:
@@ -58,13 +71,7 @@
         target: /vagrant/database/{{ item }}.bak.sql.gz
         login_user: root
         login_password: root
-      with_items: "{{ school_shortnames }}"
-    
-    - name: Write settings files
-      template:
-        src: templates/settings.php.j2
-        dest: /var/www/schools/{{ item }}/sites/default/settings.php
-      with_items: "{{ school_shortnames }}"
+      with_items: "{{ database_names.stdout_lines }}"
       
     - name: Update the admin passwords
       command: drush upwd 
@@ -72,4 +79,5 @@
         --root="/var/www/schools/{{ item }}" 
         --uri="http://{{ item }}.schools.dev"
         "admin"
-      with_items: "{{ school_shortnames }}"
+      with_items: "{{ data_directories.stdout_lines }}"
+      ignore_errors: yes
