--- a/ansible/vars/php.yml
+++ b/ansible/vars/php.yml
@@ -1,15 +1,17 @@
 ---
 php_use_managed_ini: false
 php_packages:
-  - php5
-  - php5-json
-  - php5-curl
-  - php5-mysql
-  - php5-intl
-  - php5-gd
-  - php5-mcrypt
-  - php5-cli
-  - php5-ldap
-  - php5-xmlrpc
-  - php5-dev
+  - php
+  - php-json
+  - php-curl
+  - php-mysql
+  - php-intl
+  - php-gd
+  - php-mcrypt
+  - php-cli
+  - php-ldap
+  - php-xmlrpc
+  - php-dev
   - php-pear
+  - libapache2-mod-php
+  - php-apcu
